# ChangeLog for gnome-base/gvfs
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gvfs/ChangeLog,v 1.255 2014/05/14 16:16:06 ago Exp $

  14 May 2014; Agostino Sarubbo <ago@gentoo.org> gvfs-1.18.3-r1.ebuild:
  Stable for sparc, wrt bug #508862

  13 May 2014; Agostino Sarubbo <ago@gentoo.org> gvfs-1.18.3-r1.ebuild:
  Stable for ia64, wrt bug #508862

  11 May 2014; Agostino Sarubbo <ago@gentoo.org> gvfs-1.18.3-r1.ebuild:
  Stable for ppc64, wrt bug #508862

  10 May 2014; Agostino Sarubbo <ago@gentoo.org> gvfs-1.18.3-r1.ebuild:
  Stable for ppc, wrt bug #508862

  04 May 2014; Pacho Ramos <pacho@gentoo.org> gvfs-1.18.3-r1.ebuild:
  x86 stable, bug 508862

  04 May 2014; Pacho Ramos <pacho@gentoo.org> gvfs-1.18.3-r1.ebuild:
  amd64 stable, bug 508862

*gvfs-1.20.1 (27 Apr 2014)

  27 Apr 2014; Gilles Dartiguelongue <eva@gentoo.org> +gvfs-1.20.1.ebuild,
  metadata.xml:
  Version bump for Gnome 3.12.

*gvfs-1.18.3-r1 (26 Apr 2014)

  26 Apr 2014; Pacho Ramos <pacho@gentoo.org> +gvfs-1.18.3-r1.ebuild:
  Disable obsolete gdu support

  26 Apr 2014; Pacho Ramos <pacho@gentoo.org> -gvfs-1.12.3-r1.ebuild,
  -gvfs-1.14.2.ebuild, -gvfs-1.16.4.ebuild:
  drop old

  21 Apr 2014; Agostino Sarubbo <ago@gentoo.org> gvfs-1.18.3.ebuild:
  Stable for arm, wrt bug #507568

  19 Apr 2014; Agostino Sarubbo <ago@gentoo.org> gvfs-1.18.3.ebuild:
  Stable for sparc, wrt bug #507568

  18 Apr 2014; Agostino Sarubbo <ago@gentoo.org> gvfs-1.18.3.ebuild:
  Stable for alpha, wrt bug #507568

  17 Apr 2014; Agostino Sarubbo <ago@gentoo.org> gvfs-1.18.3.ebuild:
  Stable for ia64, wrt bug #507568

  16 Apr 2014; Agostino Sarubbo <ago@gentoo.org> gvfs-1.18.3.ebuild:
  Stable for ppc64, wrt bug #507568

  14 Apr 2014; Agostino Sarubbo <ago@gentoo.org> gvfs-1.18.3.ebuild:
  Stable for ppc, wrt bug #507568

  05 Apr 2014; Alexandre Rostovtsev <tetromino@gentoo.org>
  gvfs-1.12.3-r1.ebuild, +files/gvfs-1.12.3-libcdio-0.84.patch: