@@ -12,23 +12,13 @@ DIST gvfs-1.18.3.tar.xz 1537320 SHA256 1d829716dcf1c5c016ee0c8aaff4cfd4fc4c719a4
 DIST gvfs-1.20.1.tar.xz 1558868 SHA256 73f6b104cf93d376f2c8f164ea727dd813f14ca0aa9f5a3a9d8d3a19e34a5b0a SHA512 d6c266ccff098d6f00af2f14980e26513b1ce98864d7345c502c69619bc3683eca67c8463fb77ec5480801fdf43f4c09786e8c17dbf8a37d4059f4094e8dbc90 WHIRLPOOL e18f54105b685863334eef821c6fe4554e049060de81b87c4d0a014bca9db92fe423ad4ac46bcf9facb4cfc5976ba620f535f639977d1048286043d9e489a78a
 EBUILD gvfs-1.18.3-r1.ebuild 3565 SHA256 ea1d5f02b238b50a858c4a33c99cf156c3c69c74f73ff7483ef3c0b333dfeac3 SHA512 091148b21d3d8d9e40b8fe22eea7992329cdad44019bb70994479dc1855af8aad765a257510748b58369b0a906baf4294486ca5b501e9aa34342f9662e0b4dde WHIRLPOOL b01ae8bc0c5e8387b7ee5cb2ba044e3553535d7a403281b586be57e11937abc5fafef9e47fa044a13ceb72cdebf9aa6ea5595e7e8ac8ebcdf6a0f04c1e3efcdc
 EBUILD gvfs-1.18.3.ebuild 3698 SHA256 82e611e5e807cad12f8ac1dc8cfb17373378ab12e0318d8ec2c743434a49c7f2 SHA512 662704ca0c7a7a80605f07e6536aa7916d41dba614f79462870d6d4716a39be7e01f848ef36ad7f200d597cc6273667892c3a6bfdc132f5113692106700fbde0 WHIRLPOOL 3f7be7a67b581663fa49928d8e34fb776cf6b30ef72e96531f30c7588f7bb81717787fad48d96c2875e2365a24e42a46b9ec27e3c4d7288d74017f7dd3aeb4d8
-EBUILD gvfs-1.20.1.ebuild 3561 SHA256 1b2e9b16dfc826658fa37b83c3824dd629c5d487aa42c2f2644647d3407e6ee6 SHA512 735bafd9d2ba7211dd2b77b2a14822a029a799193a8098f34f91f633e7f51202aee921c6c88aa595e935b54998a056912faf61e37a47b768a358478d5ac3cce2 WHIRLPOOL e77810ce651d9734409b82f6d9f82a8e0ccf989719330aa1df84f4dde9c94f9cee8df8cba70485d657e12f41b6bff79af149120da7e26a31653af2927cc30d05
-MISC ChangeLog 35977 SHA256 8c78a4bb168d2641a9b73782b9b0ee4fb4d0c24a71a45e6992e5cfdfb6e9a75f SHA512 271354308c3d7db0364c61b1c52f6965c30c79aa421f1d13456d63272e8e89dbd50fa888b892cac97164f6d1acbed6b3b8a9184813ecc3c0cae0240612f0fb65 WHIRLPOOL f948689a3aa677b2db836205c6f4f61f2347bb9786aff3cb325fff301230acef3fcd8d39f1ba06e5fb3241546ac0322024fb911027b08155fbd60e60d32ed5ca
+EBUILD gvfs-1.20.1.ebuild 3464 SHA256 05b8bb338430f6bc4171582bf29b7416a74ae2551d989108813fe489faf364ad SHA512 f33264d294345108e39e47fefc9314036a4acdd16f85702158377e6c89afee2756807447e0bb0e4d98bdb8913f7a8ebf7d634f5d0a2b3995634432bdaaf45b07 WHIRLPOOL 5c4d35b9329d4e937479efa076b76f8a110f92ccb72b67666254c0fd9bbdcaffa9530f0c1525951938c6aed32c24ebc9e860e91423b440fa890170bdb7a694cc
+MISC ChangeLog 36094 SHA256 81101d27e829d6c1412cbfad0cfd280190278c703c6138e92a339de77fde83d8 SHA512 8332f7dd82f0578079a76a151fd47b83c0e883f3e13fd3955f55998a0cb86ecbdeb7385d92c0f6c81060fd0cceffdd58bdb27d74c3894e1f7eb5a312d5021535 WHIRLPOOL 3433f9d02af237116977bc6a85e5018e2740d116a44bd547c8896f026c9a5dd650080d99772f1c0a5adc261ed6468c58ee3abec82f4e6fd176a40aaf949ce3e9
 MISC metadata.xml 1538 SHA256 5ee502f100b1b235e5b1855e695d4677d8e946b3102ff753a8a64f35db9c9b14 SHA512 a87f0c091e53558ce3c069bd4c69f692c73885e9c932b05d364a149b8f44139ad3b219f130b6e390c329b5a5d66ed91f8dae490c97a9e87a69db36cb0dd430a4 WHIRLPOOL 4bd19295510f5afd7dcb549e58a9a2a2f0bb9a6b0ebe2eebe255ea8027c0b4d6b59e36f47c913c2a99fa178c3268349126adb0e81829c62b70e999c92f649934
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTc5bHAAoJELp701BxlEWfrBEP/jfHnap9nQDZ+LKUfRN2mWD3
-CFOqLiotfVC2PEout/DE+57pkXvInzCT6nO+VfDAUD0XgZjORmEy3SGcqyyMptJX
-S71QBA9KclFWHZPG+lxHzKcRnA2zdbfWrlE9MXd4suE1iz1A+v8jnsRVco40JmXC
-6tafLnxA6bA95DvFA9pM4f/PAK5iuOWwnHP+O+XeBNYQxILlA/mocoMKfkZpLkdI
-YkFiEXaGOmhulzJSlrsmi0JW0J1cyZa3MaXV3eZRq8aJRwMMnroI9xrKSk53ScMv
-IoxdqG41frGEso6Jq6zVO85LAsldkbq/MwYD8maxawHLB1opuq1w5RiFtSSpgMm8
-sm4VQnWyKxE8cIfGpVdQ1xJMVMBT/Y+JpIMhdVUj08jTlHvmT+dAwaYA4kFkffIJ
-5zrcwUi/1rzU94EmBmqsrDX4l7XXcyeJwGtmMxTDgwIeIPNgX4KDJjmvqUYjzXUe
-2xAJD4UUPV5dZQ0NkpyeI1vvP4CgnwOHaZpDsTwOOoO1uquKi78hyXM0tAipq/1l
-jCRuAr+ROIojPcW64baSalEJfJ3iMxE6Rn4DHk95kUJ1aC3K+e/kTkTCBsgMzFSf
-sgGPu1trvFYGJwxernv/y3rzWIu3L7xU6Sf745m0FEp1Ayz1+ADsp7/SqCfAkLpv
-UHJFjX4UHOv0HzPd+0Gh
-=Awwe
+iEYEAREIAAYFAlN0c9cACgkQCaWpQKGI+9TpVACfUqr61esgRYc3SB0a9+I4aD9e
+yVwAn31kRHgHJ1UL2T5tKehAmCbOKJ/O
+=g/xA
 -----END PGP SIGNATURE-----
