@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/gvfs
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gvfs/ChangeLog,v 1.255 2014/05/14 16:16:06 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gvfs/ChangeLog,v 1.256 2014/05/15 07:59:18 pacho Exp $
+
+  15 May 2014; Pacho Ramos <pacho@gentoo.org> gvfs-1.20.1.ebuild:
+  Disable obexftp backend, upstream bug #729945
 
   14 May 2014; Agostino Sarubbo <ago@gentoo.org> gvfs-1.18.3-r1.ebuild:
   Stable for sparc, wrt bug #508862
